# pyactix

./: .gitignore  Cargo.toml  pyproject.toml  test.py  test.sh
.github/workflows/: CI.yml
python/pyactix/: __init__.py  _pyactix.pyi  errors.py  main.py  operation.py  router.py  types.py  utils.py
src/: lib.rs  pyexec.rs  request.rs  response.rs  routes.rs  server.rs
tests/: application.py  conftest.py  test_methods.py  test_request_details.py  test_router.py
